dvb-ci: fix some clang warnings
This issue was migrated from bug 7215 in our old bug tracker.
Original bug information:
Reporter: Martin Kaiser
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: x86
Version: Git
Attachments:
clang_12-04-29.patch: dvb-ci: fix some clang warnings
intermed_ptr_dvbci.patch: dvb-ci: fix 'intermediate pointers must be const qualified'
intermed_ptr_6lowpan.patch: packet-6lowpan.c:2567:29: warning: to be safe all intermediate pointers in cast from 'gchar **' to 'const char **' must be 'const' qualified [-Wcast-qual]
intermed_ptr_ssl.patch: ssl/dtls: fix 'intermediate pointers must be const qualified'