From Martin Kaiser: fix a few clang warnings in DVB-CI dissector https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=7215

svn path=/trunk/; revision=42347